<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Global_Variables_Modbus" Id="{71b38a62-87e3-4679-a503-3bb86014ac4c}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL

(******** Modbus TCP variable declaration - as a SLAVE ********)  (*** If as a MASTER, then don't need to declare this variable***)

   	mb_Input_Coils        		: ARRAY [0..255] OF BOOL;
    	mb_Output_Coils      	 	: ARRAY [0..255] OF BOOL;
    	mb_Input_Registers    		: ARRAY [0..255] OF WORD;
    	mb_Output_Registers   		: ARRAY [0..255] OF WORD;

	bOutputRegisterAddr0		: BOOL;

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>